k8s/base/backendburgers/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hhb-backendburgers
  labels:
    name: hhb-backendburgers
spec:
  type: ClusterIP
  selector:
    name: hhb-backendburgers
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
