k8s/base/backendburgers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-backendburgers-ingress
  labels:
    name: hhb-backendburgers-ingress
spec:
  rules:
    - host: ${APP_HOST}
      http:
        paths:
          - path: /api/burgers
            pathType: Prefix
            backend:
              service:
                name: hhb-backendburgers
                port:
                  number: 80
